--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ol id="suggestionsList"></ol>
     </div>
     
-    </div class = "Results">
+    <div class = "Results">
     <script>
         // Penalty Constants
         const PENALTIES = {
